# sing-box-mcp

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
singbox_mcp/: __init__.py  config.py  index.py  server.py  utils.py  versioning.py
tests/: test_index.py  test_server.py
